# synthetic

./: .envrc  .gitignore  .todo  .travis.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: demo.cast  demo.sh
src/: naturalhr.py  synthetic.py
src/python/synthetic/: __main__.py  cli.py  timesheets.py
tests/: test_synthetic.py
