[tool.poetry]
name = "synthetic"
version = "0.0.1"
description = "Synthetic naturalhr.net timesheets"
authors = ["Michael Joseph <michaeljoseph@gmail.com>"]
packages = [
    { include = "synthetic", from = "src/python" },
]

[tool.poetry.scripts]
synthetic = "synthetic.cli:main"

[tool.poetry.dependencies]
python = "3.7.4"
attrs = "^19.1"
click = "^7.0"
python-dateutil = "^2.8"
requests-html = "^0.10.0"
requests_cache = "^0.4.13"
terminaltables = "^3.1"
browsercookie = {path = "../browsercookie"}

[tool.poetry.dev-dependencies]
pytest = "^5.0"
flake8 = "^3.7"
autopep8 = "^1.4"
isort = "^4.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
