[tool.poetry]
name = "synthetic"
version = "0.0.1"
description = "Synthetic timesheets and approvals for naturalhr"
authors = ["Michael Joseph <michaeljoseph+@gmail.com>"]
include = [
    "README.md",
    "tox.ini",
    "tests/*.py",
]

[tool.poetry.scripts]
synthetic = 'synthetic:synthetic'

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
click = "^7.0"
python-dateutil = "^2.8"
requests-html = "^0.10.0"
requests_cache = "^0.4.13"
terminaltables = "^3.1"
pycookiecheat = "^0.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
pytest-cov = "^2.7"
pytest-watch = "^4.2"

[tool.black]
line-length = 88
skip-string-normalization = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"