[tool.poetry]
name = "synthetic"
version = "0.0.1"
description = "Synthetic timesheets and approvals for naturalhr.net and toggl.com"
authors = ["Michael Joseph <michaeljoseph+github@gmail.com>"]
include = [
    "README.md",
    "tox.ini",
    "tests/*.py",
]

[tool.poetry.scripts]
naturalhr = 'naturalhr:synthetic'
synthetic = 'synthetic:cli'

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
click = "^7.0"
python-dateutil = "^2.8"
requests-html = "^0.10.0"
requests_cache = "^0.4.13"
terminaltables = "^3.1"
pycookiecheat = "^0.4"
workdays = "^1.4"
holidays = "^0.9.11"
requests_toolbelt = "^0.9.1"
durations = "^0.3.3"
dateparser = "^0.7.2"
mistune = {version = "2.0.0a2", allow-prereleases = true}
coloredlogs = "^14.0"
slacker = "^0.14.0"
plumbum = "^1.6"
inflect = "^4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
pytest-cov = "^2.7"
pytest-watch = "^4.2"

[tool.black]
line-length = 88
skip-string-normalization = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
